# mulog

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md
.github/: FUNDING.yml
.github/workflows/: tests.yml
cmake/: cpputest_utils.cmake  mulog-config.cmake.in  mulog_cpputest_utils.cmake  mulog_test_utils.cmake  pkg-config.pc.in
examples/: CMakeLists.txt  deferred.c  realtime.c
include/: mulog.h
src/: CMakeLists.txt  color.h  list.h  list_test.cpp  mulog.c  mulog_deferred_lock_test.cpp  mulog_deferred_test.cpp  mulog_realtime_lock_test.cpp  mulog_realtime_test.cpp  mulog_test.cpp
src/internal/: config.h  interface.h  stubs.c  utils.h
src/internal/deferred/: interface.c
src/internal/realtime/: interface.c
